--- a/plot_PreVsPostAnalysis_DayNight.Rmd
+++ b/plot_PreVsPostAnalysis_DayNight.Rmd
@@ -52,28 +52,29 @@ tagproj <- proj4string(tagprj)
 
 # this file was created in PreVsPostAnalysis_DayNight.Rmd
 all.data.frames <- readRDS(file = "RData/PreVsPost_DayNight.RDS")
-KD.eachID.pre.combined <- all.data.frames[[1]]
-KD.eachID.post.combined<- all.data.frames[[2]] 
-KD.eachID.pre.day <- all.data.frames[[3]]
-KD.eachID.pre.night <- all.data.frames[[4]]
-KD.eachID.post.day <- all.data.frames[[5]] 
-KD.eachID.post.night <- all.data.frames[[6]] 
-UD.post.95.latlon <- all.data.frames[[7]] 
-UD.post.50.latlon <- all.data.frames[[8]] 
-UD.pre.95.latlon <- all.data.frames[[9]] 
-UD.pre.50.latlon <- all.data.frames[[10]] 
-UD.pre.day.95.latlon <- all.data.frames[[11]] 
-UD.pre.day.50.latlon <- all.data.frames[[12]]
-UD.pre.night.95.latlon <- all.data.frames[[13]] 
-UD.pre.night.50.latlon <- all.data.frames[[14]] 
-UD.post.day.95.latlon <- all.data.frames[[15]]
-UD.post.day.50.latlon <- all.data.frames[[16]] 
-UD.post.night.95.latlon <- all.data.frames[[17]]
-UD.post.night.50.latlon <- all.data.frames[[18]]
-UD.pre.day.night.95.latlon <- all.data.frames[[19]]
-UD.pre.day.night.50.latlon <- all.data.frames[[20]]
-UD.post.day.night.95.latlon <- all.data.frames[[21]]
-UD.post.day.night.50.latlon <- all.data.frames[[22]]
+
+KD.eachID.pre.combined <- all.data.frames$UD.eachID.pre.daynight 
+KD.eachID.post.combined<- all.data.frames$UD.eachID.post.daynight 
+KD.eachID.pre.day <- all.data.frames$UD.eachID.pre.day 
+KD.eachID.pre.night <- all.data.frames$UD.eachID.pre.night 
+KD.eachID.post.day <- all.data.frames$UD.eachID.post.day 
+KD.eachID.post.night <- all.data.frames$UD.eachID.post.night
+UD.post.95.latlon <- all.data.frames$UD95.allID.post.daynight 
+UD.post.50.latlon <- all.data.framesUD50.allID.post.daynight 
+UD.pre.95.latlon <- all.data.framesUD95.allID.pre.daynight 
+UD.pre.50.latlon <- all.data.frames$UD50.allID.pre.daynight 
+UD.pre.day.95.latlon <- all.data.frames$UD95.allID.pre.day 
+UD.pre.day.50.latlon <- all.data.frames$UD50.allID.pre.day
+UD.pre.night.95.latlon <- all.data.frames$UD95.allID.pre.night
+UD.pre.night.50.latlon <- all.data.framesUD50.allID.pre.night 
+UD.post.day.95.latlon <- all.data.frames$UD95.allID.post.day
+UD.post.day.50.latlon <- all.data.frames$UD50.allID.post.day 
+UD.post.night.95.latlon <- all.data.frames$UD95.allID.post.night 
+UD.post.night.50.latlon <- all.data.frames$UD50.allID.post.night
+UD.pre.day.night.95.latlon <- all.data.frames$UD95.allID.pre.day.night
+UD.pre.day.night.50.latlon <- all.data.frames$UD50.allID.pre.day.night
+UD.post.day.night.95.latlon <- all.data.frames$UD95.allID.post.day.night
+UD.post.day.night.50.latlon <- all.data.frames$UD50.allID.post.day.night
 
 ```
 
