--- a/deployment_Table1.Rmd
+++ b/deployment_Table1.Rmd
@@ -23,7 +23,7 @@ This notebook creates Table 1. It brings in the file IDvsUDs_2018-11-01.csv, whi
 
 data1 <- read.csv(file = "data/IDvsUDs_2018-11-01.csv")
 
-data1 %>% select(ID.f, Capture_Date, n.days, n.relocations,
+data1 %>% dplyr::select(ID.f, Capture_Date, n.days, n.relocations,
                  n.relocations.all, n.day, n.day.all,
                  n.night, n.night.all, Sex, Mass_kg, SCL_cm,
                  period) -> data2
